# buildpractice

./: CMakeLists.txt  Makefile
app/: CMakeLists.txt  app.c
include/: common.h  screen_out.h  student_data.h  student_func.h
src/: CMakeLists.txt  screen_out.c  student_func.c
